Fixed whitespace

--- a/css/style.css
+++ b/css/style.css
@@ -348,8 +348,12 @@ body:has(.word--pinned:hover) .lock-indicator__icon--locked {
     align-items: center;
     justify-content: space-between;
     gap: 1rem;
-    padding: 0.5rem 0;
+    /* padding: 0.5rem 0; */
     opacity: 0.5;
+}
+
+.saved-names__item+.saved-names__item {
+    margin-top: 1rem;
 }
 
 .saved-names__item.is-active,
@@ -391,5 +395,5 @@ body:has(.word--pinned:hover) .lock-indicator__icon--locked {
     justify-content: space-between;
     gap: 1em;
     margin: -.5rem -.5rem 0 0;
-    margin-bottom: calc(var(--whitespace) - 1rem);
+    margin-bottom: calc(var(--whitespace) - .5rem);
 }
